log
Tue 11 Apr 2023 02:13:55 AM UTC: 
 tests:  0|6
total_score: 0/70
f227a6d
Fri 14 Apr 2023 02:00:18 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:19: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   60 |   newMap->current = NULL;
      |                   ^
hashmap.c:61:16: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   61 |   newMap->size = NULL;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
9b296b8
Fri 14 Apr 2023 02:00:50 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
cd17ed0
Fri 14 Apr 2023 02:13:17 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
c9aaf82
Fri 14 Apr 2023 02:39:44 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2fefb9b
Fri 12 May 2023 06:48:24 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   44 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
6c46929
Fri 12 May 2023 06:49:46 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
25340d7
Fri 12 May 2023 06:51:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
392f809
Fri 12 May 2023 06:54:58 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
4b7747a
Fri 12 May 2023 06:57:18 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
a812ee7
Sat 13 May 2023 11:28:39 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:3: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   88 |   pos = hash(key, map->capacity);
      |   ^~~
      |   pow
hashmap.c:88:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1e6a3d5
Sat 13 May 2023 11:36:57 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   88 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
f69a0f1
Sat 13 May 2023 11:37:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
999cc61
Sun 14 May 2023 02:12:00 AM UTC: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:36: error: expected ‘;’ before ‘}’ token
   98 |     pos = (pos + 1) % map->capacity
      |                                    ^
      |                                    ;
   99 |   }
      |   ~                                 
Compilation failed
4b46f23
Sun 14 May 2023 02:12:21 AM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
590436c
Sun 14 May 2023 02:17:27 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:83:9: error: unused variable ‘buscado’ [-Werror=unused-variable]
   83 |   Pair* buscado = searchMap( map, key);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3f5c5f9
Sun 14 May 2023 02:17:57 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  8|3
total_score: 40/70
6aabeae
Sun 14 May 2023 02:18:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:88:3: error: expected ‘;’ before ‘}’ token
   88 |   }
      |   ^
Compilation failed
27426f8
Sun 14 May 2023 02:18:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
9461bb1
Sun 14 May 2023 02:18:42 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
69038fd
